--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@radixdlt/radix-dapp-toolkit": "^2.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router": "^7.1.3",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5"
   },
